# QT_Demo

./: README.md
qtcreator_translate_demo/: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.ui
visual_studio_translate_demo/: CMakeLists.txt  README.md  configuure.cmd  main.cpp  mainwindow.cpp  qtTrans_zh_CN.ts  vs_qtTrans_zh_CN.ts
